Update CSS and HTML files for donation and heroes pages.

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -9,7 +9,10 @@
 <body>
 
     <header>
-        <h1>Donation and Support Hub</h1>
+        <header>
+      <h1>Harmony Link</h1>
+      <p>Bridging Lives, Reducing Waste, Weaving Sustainability</p>
+       <h1>Donation and Support Hub</h1>
     </header>
 <nav>
         <ul>
