--- a/static/css/donate.css
+++ b/static/css/donate.css
@@ -1,4 +1,5 @@
 :root {
+--white: #e1d9ff;
     --primary-bg: #e1d9ff;
     /* Light Purple */
     --dark-purple: #2b1444;
@@ -47,20 +48,31 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh; /* Ensure body takes at least the full viewport height */
 }
 
 header {
     background-color: var(--train-purple);
-    color: white;
+    color: var(--white);
     text-align: center;
-    padding: 20px;
-    width: 100%;
+    padding: 2rem;
+}
+
+header h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+    animation: zoomIn 1s ease-in-out;
+}
+
+header p {
+    font-size: 1.2rem;
+    font-style: italic;
+    animation: fadeInUp 1s ease-in-out;
 }
 
 section {
     display: block;
     /* Changed from none to block */
-    max-width: 600px;
     margin: 20px;
     padding: 20px;
     border: 2px solid var(--dark-purple);
@@ -108,14 +120,34 @@ button {
 footer {
     background-color: var(--train-window);
     text-align: center;
-    padding: 0.1rem;
-    position: fixed;
-    bottom: 0;
+    padding: 1rem; /* Add padding to the footer */
     width: 100%;
-
+    margin-top: auto; /* Push the footer to the bottom */
 }
 
 footer p {
     color: var(--dark-purple);
     font-size: 0.8rem;
+}
+/* Animations */
+@keyframes zoomIn {
+    from {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes fadeInUp {
+    from {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
