--- a/static/css/heroes.css
+++ b/static/css/heroes.css
@@ -1,4 +1,5 @@
 :root {
+--white: #e1d9ff;
     --primary-bg: #e1d9ff;
     /* Light Purple */
     --dark-purple: #2b1444;
@@ -43,10 +44,25 @@ body {
     text-align: center;
     background-color: var(--primary-bg);
 }
-
-h1 {
-    color: var(--dark-purple);
+header {
+    background-color: var(--train-purple);
+    color: var(--white);
+    text-align: center;
+    padding: 2rem;
 }
+
+header h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+    animation: zoomIn 1s ease-in-out;
+}
+
+header p {
+    font-size: 1.2rem;
+    font-style: italic;
+    animation: fadeInUp 1s ease-in-out;
+}
+
 
 table {
     width: 80%;
@@ -84,4 +100,26 @@ tr:nth-child(odd) {
 tr:nth-child(odd):hover {
     background-color: var(--dark-pink);
     transition: background-color 0.3s ease; /* Smooth transition on hover */
+}
+/* Animations */
+@keyframes zoomIn {
+    from {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes fadeInUp {
+    from {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
