--- a/static/css/aboutus.css
+++ b/static/css/aboutus.css
@@ -13,7 +13,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: var(--white);
+    background-color: var(--dark-pink);
     color: var(--dark-purple);
 }
 
