--- a/templates/dummypg.html
+++ b/templates/dummypg.html
@@ -53,7 +53,7 @@
         <label for="cvv">CVV:</label>
         <input type="text" id="cvv" name="cvv" placeholder="123" required>
 
-        <button type="submit">Pay Now</button>
+        <a link="{{ url_for('donationcomplete') }}" ><button type="submit" >Pay Now</button></a>
     </form>
 </body>
 </html>
