--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -7,11 +7,22 @@
     <link rel="stylesheet" href="../static/css/aboutus.css">
 </head>
 <body>
-
   <header>
-    <h1>About Us</h1>
-    <p>Embrace, Connect, Impact</p>
-  </header>
+      <h1>Harmony Link</h1>
+      <p>Bridging Lives, Reducing Waste, Weaving Sustainability</p>
+      <h1>About Us</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="volunteer.html">Volunteer</a></li>
+        <li><a href="donate.html">Donate</a></li>
+        <li><a href="calendar.html">Calendar</a></li>
+        <li><a href="community.html">Community</a></li>
+      </ul>
+    </nav>
+  
 
   <section id="journey">
     <h2>Our Journey</h2>
@@ -106,8 +117,8 @@
 
 </section>
   <footer>
-    <p>&copy; 2024 [Your Platform Name] - Where Compassion Meets Action</p>
-  </footer>
+        <p>&copy; 2024 Harmony Link | Contact: info@harmonylink.org</p>
+    </footer>
 
 </body>
 </html>
