--- a/templates/dummypg.html
+++ b/templates/dummypg.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <h1>Fictional Payment Gateway</h1>
-    <form action="#" method="post">
+    <form action="{{ url_for('donationcomplete') }}" method="GET">
         <label for="card-number">Card Number:</label>
         <input type="text" id="card-number" name="card-number" placeholder="1234 5678 9012 3456" required>
 
@@ -53,7 +53,7 @@
         <label for="cvv">CVV:</label>
         <input type="text" id="cvv" name="cvv" placeholder="123" required>
 
-        <a link="{{ url_for('donationcomplete') }}" ><button type="submit" >Pay Now</button></a>
+        <button type="submit">Pay</button>
     </form>
 </body>
 </html>
