--- a/templates/donate.html
+++ b/templates/donate.html
@@ -78,7 +78,7 @@
         <option value="belowAverage">Below Average</option>
     </select><br>
 
-    <input type="submit" value="Submit">
+    <button type="submit">Donate Now</button>
 </form>
     </section>
 
@@ -126,7 +126,7 @@
         <option value="senior">Senior</option>
     </select><br>
 
-    <input type="submit" value="Submit">
+    <button type="submit">Donate Now</button>
 </form>
 </section>
 
