Update CSS and HTML files for the website.

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -49,15 +49,15 @@
 
   <section id="meet-the-team">
     <h2>Meet the Team</h2>
-    <div class="team-member">
-      <h3>[Founder's Name] - Chief Dreamer</h3>
+    
+      <h3>Sunidhi P</h3>
+      <h3>Vishal Kaman</h3>
       <p>The visionary who sparked this movement, our Chief Dreamer believes in the transformative power of compassionate connections and envisions a world where everyone has the opportunity to make a positive impact.</p>
-    </div>
+    
 
-    <div class="team-member">
-      <h3>[Team Member Names] - The Catalysts</h3>
+    
       <p>Meet the creative minds, tech wizards, and community enthusiasts who breathe life into our platform. Together, we're a dynamic force, committed to turning dreams into reality.</p>
-    </div>
+    
   </section>
 
   <section id="join-us">
