--- a/templates/community.html
+++ b/templates/community.html
@@ -13,12 +13,12 @@
         <header>
       <h1>Harmony Link</h1>
       <p>Bridging Lives, Reducing Waste, Weaving Sustainability</p>
-       <h1>Donation and Support Hub</h1>
+       <h1>Community Canvas</h1>
     </header>
 <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li> 
+            <li><a href="aboutus.html">About Us</a></li> 
             <li><a href="volunteer.html">Volunteer</a></li>
             <li><a href="donate.html">Donate</a></li>
             <li><a href="calendar.html">Calendar</a></li>
