--- a/templates/volunteer.html
+++ b/templates/volunteer.html
@@ -160,6 +160,9 @@
     </div>
 </section>
 <script src="main.js"></script>
+ <footer>
+        <p>&copy; 2024 Harmony Link | Contact: info@harmonylink.org</p>
+    </footer>
 <!-- Your existing content -->
 
 <!-- Include script for any interactive features -->
