--- a/static/css/community.css
+++ b/static/css/community.css
@@ -109,7 +109,8 @@ nav a:hover {
 }
 
 .feedback-section .review-box h3 {
-    color: var(--white);
+    color: var(--dark-purple);
+    font-size: 1.5rem;
     margin-top: 1rem;
 }
 .feedback-section .review-box:hover {
@@ -196,10 +197,11 @@ nav a:hover {
     box-sizing: border-box;
 }
 
-.social-media-section .story-clip img {
+.social-media-section .story-clip video {
     width: 100%;
     border-radius: 8px;
 }
+
 
 .social-media-section .story-clip .story-text {
     color: var(--white);
