--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Webpage</title>
+    <title>Calendar</title>
     <link rel="stylesheet" href="../static/css/styles.css">
 
     <!-- Include FullCalendar CSS -->
