user login style

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -62,16 +62,16 @@
                     description: '"Good will care home",Painting, drawing, and other visual arts activities.'
                 },
                 {
-                    title: 'Moon and Sunshine orphanage',
+                    title: 'Music Therapy Session',
                     start: '2024-02-05',
                     end: '2024-02-07',
-                    description: 'Details about Care Home Event 2'
+                    description: '"Bala Yesu Bhavana", Music therapy session including various musical activities.'
                 },
                 {
-                    title: 'Care Home Event 3',
-                    start: '2024-01-10',
-                    end: '2024-01-12',
-                    description: 'Details about Care Home Event 3'
+                    title: 'Gardening Workshops',
+                    start: '2024-02-10',
+                    end: '2024-02-12',
+                    description: '"Asha nandana", Gardening tips, plant care, and hands-on gardening activities.'
                 },
                 // Add more events as needed
             ],
