--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -19,18 +19,20 @@
 </head>
 <body>
 <header>
-    <h1>Harmony Link</h1>
-</header>
-
-<!-- Navigation Bar -->
-<nav>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-</nav>
+      <h1>Harmony Link</h1>
+      <p>Bridging Lives, Reducing Waste, Weaving Sustainability</p>
+      <h1>Calendar</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="volunteer.html">Volunteer</a></li>
+        <li><a href="donate.html">Donate</a></li>
+        <li><a href="calendar.html">Calendar</a></li>
+        <li><a href="community.html">Community</a></li>
+      </ul>
+    </nav>
 
 <!-- Calendar Section -->
 <section>
