--- a/static/css/calender.css
+++ b/static/css/calender.css
@@ -25,6 +25,18 @@ header {
     padding: 2rem;
 }
 
+header h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+    animation: zoomIn 1s ease-in-out;
+}
+
+header p {
+    font-size: 1.2rem;
+    font-style: italic;
+    animation: fadeInUp 1s ease-in-out;
+}
+
 nav {
     background-color: var(--train-window);
     padding: 1rem;
