--- a/templates/carehomes.html
+++ b/templates/carehomes.html
@@ -11,7 +11,7 @@
 
     <!-- Add a button to navigate to a specific route -->
     <a href="{{ url_for('index') }}">
-        <button>Go to Route</button>
+        <button>Go to Home</button>
     </a>
 
     <table border="1">
